--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ pokedex-*.tar
 
 # Ignore assets that are produced by build tools.
 /priv/static/assets/
+/.elixir_ls
 
 # Ignore digested assets cache.
 /priv/static/cache_manifest.json
